@@ -1,150 +1,25 @@
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Maps;
-import com.google.common.collect.Sets;
-import com.mojang.logging.LogUtils;
-import com.mojang.serialization.Codec;
-import com.mojang.serialization.codecs.RecordCodecBuilder;
-import it.unimi.dsi.fastutil.shorts.Short2ObjectMap;
-import it.unimi.dsi.fastutil.shorts.Short2ObjectOpenHashMap;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Iterables;
+import java.util.Collection;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
 import java.util.function.Predicate;
-import java.util.stream.Stream;
-import org.slf4j.Logger;
 
-public class che {
-   private static final Logger a = LogUtils.getLogger();
-   private final Short2ObjectMap<chd> b = new Short2ObjectOpenHashMap();
-   private final Map<jr<chf>, Set<chd>> c = Maps.newHashMap();
-   private final Runnable d;
-   private boolean e;
-
-   public che(Runnable $$0) {
-      this($$0, true, ImmutableList.of());
+public class che extends cgs<cpl> {
+   @Override
+   public Set<cft<?>> a() {
+      return ImmutableSet.copyOf(Iterables.concat(super.a(), List.of(cft.C)));
    }
 
-   che(Runnable $$0, boolean $$1, List<chd> $$2) {
-      this.d = $$0;
-      this.e = $$1;
-      $$2.forEach(this::a);
+   protected void a(arn $$0, cpl $$1) {
+      super.a($$0, $$1);
+      a($$1, $$0x -> $$0x.aq() == bwb.bR)
+         .or(() -> a($$1, $$0xx -> $$0xx.aq() != bwb.bR))
+         .ifPresentOrElse($$1x -> $$1.eb().a(cft.C, $$1x), () -> $$1.eb().b(cft.C));
    }
 
-   public che.a a() {
-      return new che.a(this.e, this.b.values().stream().map(chd::a).toList());
-   }
-
-   public Stream<chd> a(Predicate<jr<chf>> $$0, chc.b $$1) {
-      return this.c.entrySet().stream().filter($$1x -> $$0.test((jr<chf>)$$1x.getKey())).flatMap($$0x -> ((Set)$$0x.getValue()).stream()).filter($$1.a());
-   }
-
-   public void a(ji $$0, jr<chf> $$1) {
-      if (this.a(new chd($$0, $$1, this.d))) {
-         a.debug("Added POI of type {} @ {}", $$1.g(), $$0);
-         this.d.run();
-      }
-   }
-
-   private boolean a(chd $$0) {
-      ji $$1 = $$0.g();
-      jr<chf> $$2 = $$0.h();
-      short $$3 = kk.b($$1);
-      chd $$4 = (chd)this.b.get($$3);
-      if ($$4 != null) {
-         if ($$2.equals($$4.h())) {
-            return false;
-         }
-
-         af.b("POI data mismatch: already registered at " + $$1);
-      }
-
-      this.b.put($$3, $$0);
-      this.c.computeIfAbsent($$2, $$0x -> Sets.newHashSet()).add($$0);
-      return true;
-   }
-
-   public void a(ji $$0) {
-      chd $$1 = (chd)this.b.remove(kk.b($$0));
-      if ($$1 == null) {
-         a.error("POI data mismatch: never registered at {}", $$0);
-      } else {
-         this.c.get($$1.h()).remove($$1);
-         a.debug("Removed POI of type {} @ {}", LogUtils.defer($$1::h), LogUtils.defer($$1::g));
-         this.d.run();
-      }
-   }
-
-   @Deprecated
-   @bag
-   public int b(ji $$0) {
-      return this.e($$0).map(chd::b).orElse(0);
-   }
-
-   public boolean c(ji $$0) {
-      chd $$1 = (chd)this.b.get(kk.b($$0));
-      if ($$1 == null) {
-         throw (IllegalStateException)af.b(new IllegalStateException("POI never registered at " + $$0));
-      } else {
-         boolean $$2 = $$1.d();
-         this.d.run();
-         return $$2;
-      }
-   }
-
-   public boolean a(ji $$0, Predicate<jr<chf>> $$1) {
-      return this.d($$0).filter($$1).isPresent();
-   }
-
-   public Optional<jr<chf>> d(ji $$0) {
-      return this.e($$0).map(chd::h);
-   }
-
-   private Optional<chd> e(ji $$0) {
-      return Optional.ofNullable((chd)this.b.get(kk.b($$0)));
-   }
-
-   public void a(Consumer<BiConsumer<ji, jr<chf>>> $$0) {
-      if (!this.e) {
-         Short2ObjectMap<chd> $$1 = new Short2ObjectOpenHashMap(this.b);
-         this.c();
-         $$0.accept(($$1x, $$2) -> {
-            short $$3 = kk.b($$1x);
-            chd $$4 = (chd)$$1.computeIfAbsent($$3, $$2x -> new chd($$1x, $$2, this.d));
-            this.a($$4);
-         });
-         this.e = true;
-         this.d.run();
-      }
-   }
-
-   private void c() {
-      this.b.clear();
-      this.c.clear();
-   }
-
-   boolean b() {
-      return this.e;
-   }
-
-   public static record a(boolean b, List<chd.a> c) {
-      public static final Codec<che.a> a = RecordCodecBuilder.create(
-         $$0 -> $$0.group(Codec.BOOL.lenientOptionalFieldOf("Valid", false).forGetter(che.a::a), chd.a.a.listOf().fieldOf("Records").forGetter(che.a::b))
-               .apply($$0, che.a::new)
-      );
-
-      public che a(Runnable $$0) {
-         return new che($$0, this.b, this.c.stream().map($$1 -> $$1.a($$0)).toList());
-      }
-
-      public boolean a() {
-         return this.b;
-      }
-
-      public List<chd.a> b() {
-         return this.c;
-      }
+   private static Optional<bwr> a(cpl $$0, Predicate<bwr> $$1) {
+      return $$0.eb().c(cft.g).stream().flatMap(Collection::stream).filter($$0::b).filter($$1).findFirst();
    }
 }
