@@ -5,34 +5,37 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
-public class gg implements ArgumentType<cuu> {
-   private static final Collection<String> a = List.of("container.*", "container.5", "weapon");
-   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> wp.b("slot.unknown", $$0));
+public class gg implements ArgumentType<Integer> {
+   private static final Collection<String> a = Arrays.asList("container.5", "weapon");
+   private static final DynamicCommandExceptionType b = new DynamicCommandExceptionType($$0 -> wv.b("slot.unknown", $$0));
+   private static final DynamicCommandExceptionType c = new DynamicCommandExceptionType($$0 -> wv.b("slot.only_single_allowed", $$0));
 
    public static gg a() {
       return new gg();
    }
 
-   public static cuu a(CommandContext<ex> $$0, String $$1) {
-      return (cuu)$$0.getArgument($$1, cuu.class);
+   public static int a(CommandContext<ex> $$0, String $$1) {
+      return (Integer)$$0.getArgument($$1, Integer.class);
    }
 
-   public cuu a(StringReader $$0) throws CommandSyntaxException {
+   public Integer a(StringReader $$0) throws CommandSyntaxException {
       String $$1 = fb.a($$0, $$0x -> $$0x != ' ');
-      cuu $$2 = cuv.a($$1);
+      cvl $$2 = cvm.a($$1);
       if ($$2 == null) {
          throw b.createWithContext($$0, $$1);
+      } else if ($$2.b() != 1) {
+         throw c.createWithContext($$0, $$1);
       } else {
-         return $$2;
+         return $$2.a().getInt(0);
       }
    }
 
    public <S> CompletableFuture<Suggestions> listSuggestions(CommandContext<S> $$0, SuggestionsBuilder $$1) {
-      return fc.b(cuv.a(), $$1);
+      return fc.b(cvm.b(), $$1);
    }
 
    public Collection<String> getExamples() {
