@@ -1,55 +1,19 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class rg {
-   public static final akt<egg<?, ?>> a = rf.a("ice_spike");
-   public static final akt<egg<?, ?>> b = rf.a("ice_patch");
-   public static final akt<egg<?, ?>> c = rf.a("forest_rock");
-   public static final akt<egg<?, ?>> d = rf.a("iceberg_packed");
-   public static final akt<egg<?, ?>> e = rf.a("iceberg_blue");
-   public static final akt<egg<?, ?>> f = rf.a("blue_ice");
-   public static final akt<egg<?, ?>> g = rf.a("lake_lava");
-   public static final akt<egg<?, ?>> h = rf.a("disk_clay");
-   public static final akt<egg<?, ?>> i = rf.a("disk_gravel");
-   public static final akt<egg<?, ?>> j = rf.a("disk_sand");
-   public static final akt<egg<?, ?>> k = rf.a("freeze_top_layer");
-   public static final akt<egg<?, ?>> l = rf.a("disk_grass");
-   public static final akt<egg<?, ?>> m = rf.a("bonus_chest");
-   public static final akt<egg<?, ?>> n = rf.a("void_start_platform");
-   public static final akt<egg<?, ?>> o = rf.a("desert_well");
-   public static final akt<egg<?, ?>> p = rf.a("spring_lava_overworld");
-   public static final akt<egg<?, ?>> q = rf.a("spring_lava_frozen");
-   public static final akt<egg<?, ?>> r = rf.a("spring_water");
+   public static final alc<ehd<?, ?>> a = rh.a("end_platform");
+   public static final alc<ehd<?, ?>> b = rh.a("end_spike");
+   public static final alc<ehd<?, ?>> c = rh.a("end_gateway_return");
+   public static final alc<ehd<?, ?>> d = rh.a("end_gateway_delayed");
+   public static final alc<ehd<?, ?>> e = rh.a("chorus_plant");
+   public static final alc<ehd<?, ?>> f = rh.a("end_island");
 
-   public static void a(qe<egg<?, ?>> $$0) {
-      rf.a($$0, a, egu.s);
-      rf.a($$0, b, egu.G, new eiv(elh.a(dkg.ja), eev.c(List.of(dkg.j, dkg.i, dkg.l, dkg.k, dkg.fA, dkg.ec, dkg.eb)), bsj.a(2, 3), 1));
-      rf.a($$0, c, egu.F, new eir(dkg.cu.m()));
-      rf.a($$0, d, egu.E, new eir(dkg.ja.m()));
-      rf.a($$0, e, egu.E, new eir(dkg.ny.m()));
-      rf.a($$0, f, egu.D);
-      rf.a($$0, g, egu.H, new ehj.a(ekz.a(dkg.K.m()), ekz.a(dkg.b.m())));
-      rf.a($$0, h, egu.G, new eiv(elh.a(dkg.ee), eev.c(List.of(dkg.j, dkg.ee)), bsj.a(2, 3), 1));
-      rf.a($$0, i, egu.G, new eiv(elh.a(dkg.O), eev.c(List.of(dkg.j, dkg.i)), bsj.a(2, 5), 2));
-      rf.a(
-         $$0, j, egu.G, new eiv(new elh(ekz.a(dkg.L), List.of(new elh.a(eev.a(jn.a.q(), dkg.a), ekz.a(dkg.bc)))), eev.c(List.of(dkg.j, dkg.i)), bsj.a(2, 6), 2)
-      );
-      rf.a($$0, k, egu.u);
-      rf.a(
-         $$0,
-         l,
-         egu.G,
-         new eiv(
-            new elh(ekz.a(dkg.j), List.of(new elh.a(eev.a(eev.b(eev.b(jn.b.q()), eev.a(jn.b.q(), etx.c))), ekz.a(dkg.i)))),
-            eev.c(List.of(dkg.j, dkg.tm)),
-            bsj.a(2, 6),
-            2
-         )
-      );
-      rf.a($$0, m, egu.ad);
-      rf.a($$0, n, egu.n);
-      rf.a($$0, o, egu.o);
-      rf.a($$0, p, egu.k, new ejt(etx.e.g(), true, 4, 1, jv.a(dke::p, dkg.b, dkg.c, dkg.e, dkg.g, dkg.tn, dkg.rb, dkg.rp, dkg.j)));
-      rf.a($$0, q, egu.k, new ejt(etx.e.g(), true, 4, 1, jv.a(dke::p, dkg.ec, dkg.rr, dkg.ja)));
-      rf.a($$0, r, egu.k, new ejt(etx.c.g(), true, 4, 1, jv.a(dke::p, dkg.b, dkg.c, dkg.e, dkg.g, dkg.tn, dkg.rb, dkg.rp, dkg.j, dkg.ec, dkg.rr, dkg.ja)));
+   public static void a(qg<ehd<?, ?>> $$0) {
+      rh.a($$0, a, ehr.J);
+      rh.a($$0, b, ehr.K, new ekp(false, ImmutableList.of(), null));
+      rh.a($$0, c, ehr.M, eju.a(arn.a, true));
+      rh.a($$0, d, ehr.M, eju.a());
+      rh.a($$0, e, ehr.l);
+      rh.a($$0, f, ehr.L);
    }
 }
