@@ -1,330 +1,82 @@
-import com.google.common.collect.ImmutableList;
 import java.util.List;
-import java.util.Optional;
-import java.util.OptionalInt;
 
 public class rk {
-   public static final akt<egg<?, ?>> a = rf.a("crimson_fungus");
-   public static final akt<egg<?, ?>> b = rf.a("crimson_fungus_planted");
-   public static final akt<egg<?, ?>> c = rf.a("warped_fungus");
-   public static final akt<egg<?, ?>> d = rf.a("warped_fungus_planted");
-   public static final akt<egg<?, ?>> e = rf.a("huge_brown_mushroom");
-   public static final akt<egg<?, ?>> f = rf.a("huge_red_mushroom");
-   public static final akt<egg<?, ?>> g = rf.a("oak");
-   public static final akt<egg<?, ?>> h = rf.a("dark_oak");
-   public static final akt<egg<?, ?>> i = rf.a("pale_oak");
-   public static final akt<egg<?, ?>> j = rf.a("pale_oak_bonemeal");
-   public static final akt<egg<?, ?>> k = rf.a("pale_oak_creaking");
-   public static final akt<egg<?, ?>> l = rf.a("birch");
-   public static final akt<egg<?, ?>> m = rf.a("acacia");
-   public static final akt<egg<?, ?>> n = rf.a("spruce");
-   public static final akt<egg<?, ?>> o = rf.a("pine");
-   public static final akt<egg<?, ?>> p = rf.a("jungle_tree");
-   public static final akt<egg<?, ?>> q = rf.a("fancy_oak");
-   public static final akt<egg<?, ?>> r = rf.a("jungle_tree_no_vine");
-   public static final akt<egg<?, ?>> s = rf.a("mega_jungle_tree");
-   public static final akt<egg<?, ?>> t = rf.a("mega_spruce");
-   public static final akt<egg<?, ?>> u = rf.a("mega_pine");
-   public static final akt<egg<?, ?>> v = rf.a("super_birch_bees_0002");
-   public static final akt<egg<?, ?>> w = rf.a("super_birch_bees");
-   public static final akt<egg<?, ?>> x = rf.a("swamp_oak");
-   public static final akt<egg<?, ?>> y = rf.a("jungle_bush");
-   public static final akt<egg<?, ?>> z = rf.a("azalea_tree");
-   public static final akt<egg<?, ?>> A = rf.a("mangrove");
-   public static final akt<egg<?, ?>> B = rf.a("tall_mangrove");
-   public static final akt<egg<?, ?>> C = rf.a("cherry");
-   public static final akt<egg<?, ?>> D = rf.a("oak_bees_0002_leaf_litter");
-   public static final akt<egg<?, ?>> E = rf.a("oak_bees_002");
-   public static final akt<egg<?, ?>> F = rf.a("oak_bees_005");
-   public static final akt<egg<?, ?>> G = rf.a("birch_bees_0002");
-   public static final akt<egg<?, ?>> H = rf.a("birch_bees_0002_leaf_litter");
-   public static final akt<egg<?, ?>> I = rf.a("birch_bees_002");
-   public static final akt<egg<?, ?>> J = rf.a("birch_bees_005");
-   public static final akt<egg<?, ?>> K = rf.a("fancy_oak_bees_0002_leaf_litter");
-   public static final akt<egg<?, ?>> L = rf.a("fancy_oak_bees_002");
-   public static final akt<egg<?, ?>> M = rf.a("fancy_oak_bees_005");
-   public static final akt<egg<?, ?>> N = rf.a("fancy_oak_bees");
-   public static final akt<egg<?, ?>> O = rf.a("cherry_bees_005");
-   public static final akt<egg<?, ?>> P = rf.a("oak_leaf_litter");
-   public static final akt<egg<?, ?>> Q = rf.a("dark_oak_leaf_litter");
-   public static final akt<egg<?, ?>> R = rf.a("birch_leaf_litter");
-   public static final akt<egg<?, ?>> S = rf.a("fancy_oak_leaf_litter");
+   public static final alc<ehd<?, ?>> a = rh.a("ore_magma");
+   public static final alc<ehd<?, ?>> b = rh.a("ore_soul_sand");
+   public static final alc<ehd<?, ?>> c = rh.a("ore_nether_gold");
+   public static final alc<ehd<?, ?>> d = rh.a("ore_quartz");
+   public static final alc<ehd<?, ?>> e = rh.a("ore_gravel_nether");
+   public static final alc<ehd<?, ?>> f = rh.a("ore_blackstone");
+   public static final alc<ehd<?, ?>> g = rh.a("ore_dirt");
+   public static final alc<ehd<?, ?>> h = rh.a("ore_gravel");
+   public static final alc<ehd<?, ?>> i = rh.a("ore_granite");
+   public static final alc<ehd<?, ?>> j = rh.a("ore_diorite");
+   public static final alc<ehd<?, ?>> k = rh.a("ore_andesite");
+   public static final alc<ehd<?, ?>> l = rh.a("ore_tuff");
+   public static final alc<ehd<?, ?>> m = rh.a("ore_coal");
+   public static final alc<ehd<?, ?>> n = rh.a("ore_coal_buried");
+   public static final alc<ehd<?, ?>> o = rh.a("ore_iron");
+   public static final alc<ehd<?, ?>> p = rh.a("ore_iron_small");
+   public static final alc<ehd<?, ?>> q = rh.a("ore_gold");
+   public static final alc<ehd<?, ?>> r = rh.a("ore_gold_buried");
+   public static final alc<ehd<?, ?>> s = rh.a("ore_redstone");
+   public static final alc<ehd<?, ?>> t = rh.a("ore_diamond_small");
+   public static final alc<ehd<?, ?>> u = rh.a("ore_diamond_medium");
+   public static final alc<ehd<?, ?>> v = rh.a("ore_diamond_large");
+   public static final alc<ehd<?, ?>> w = rh.a("ore_diamond_buried");
+   public static final alc<ehd<?, ?>> x = rh.a("ore_lapis");
+   public static final alc<ehd<?, ?>> y = rh.a("ore_lapis_buried");
+   public static final alc<ehd<?, ?>> z = rh.a("ore_infested");
+   public static final alc<ehd<?, ?>> A = rh.a("ore_emerald");
+   public static final alc<ehd<?, ?>> B = rh.a("ore_ancient_debris_large");
+   public static final alc<ehd<?, ?>> C = rh.a("ore_ancient_debris_small");
+   public static final alc<ehd<?, ?>> D = rh.a("ore_copper_small");
+   public static final alc<ehd<?, ?>> E = rh.a("ore_copper_large");
+   public static final alc<ehd<?, ?>> F = rh.a("ore_clay");
 
-   private static eju.a a(dke $$0, dke $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new eju.a(ekz.a($$0), new eme($$2, $$3, $$4), ekz.a($$1), new ekf(bsa.a($$5), bsa.a(0), 3), new ekc(1, 0, 1));
-   }
-
-   private static eju.a a() {
-      return a(dkg.X, dkg.aK, 4, 2, 0, 2).a();
-   }
-
-   private static eju.a b() {
-      return new eju.a(ekz.a(dkg.ad), new elz(6, 2, 1), ekz.a(dkg.aQ), new eki(bsa.a(0), bsa.a(0)), new ekb(1, 1, 0, 1, 2, OptionalInt.empty()));
-   }
-
-   private static eju.a c() {
-      return a(dkg.Z, dkg.aM, 5, 2, 0, 2).a();
-   }
-
-   private static eju.a d() {
-      return a(dkg.Z, dkg.aM, 5, 2, 6, 2).a();
-   }
-
-   private static eju.a e() {
-      return a(dkg.aa, dkg.aN, 4, 8, 0, 2);
-   }
-
-   private static eju.a f() {
-      return new eju.a(ekz.a(dkg.X), new ema(3, 11, 0), ekz.a(dkg.aK), new ekj(bsa.a(2), bsa.a(4), 4), new ekc(0, 0, 0, OptionalInt.of(4))).a();
-   }
-
-   private static eju.a g() {
-      return new eju.a(
-            ekz.a(dkg.ac),
-            new ely(7, 1, 0, new bsk(brj.<bsd>b().a(bsa.a(1), 1).a(bsa.a(2), 1).a(bsa.a(3), 1).a()), bsj.a(2, 4), bsj.a(-4, -3), bsj.a(-1, 0)),
-            ekz.a(dkg.aP),
-            new ekh(bsa.a(4), bsa.a(0), bsa.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new ekc(1, 0, 2)
-         )
-         .a();
-   }
-
-   public static void a(qe<egg<?, ?>> $$0) {
-      js<dke> $$1 = $$0.a(mc.f);
-      eev $$2 = eev.a(
-         dkg.z,
-         dkg.A,
-         dkg.B,
-         dkg.C,
-         dkg.D,
-         dkg.E,
-         dkg.F,
-         dkg.G,
-         dkg.H,
-         dkg.bY,
-         dkg.bZ,
-         dkg.ca,
-         dkg.cb,
-         dkg.cc,
-         dkg.cd,
-         dkg.ce,
-         dkg.cf,
-         dkg.cg,
-         dkg.ch,
-         dkg.ci,
-         dkg.cj,
-         dkg.ck,
-         dkg.cl,
-         dkg.cm,
-         dkg.cn,
-         dkg.cJ,
-         dkg.ef,
-         dkg.fp,
-         dkg.fq,
-         dkg.fr,
-         dkg.fs,
-         dkg.fB,
-         dkg.fL,
-         dkg.fX,
-         dkg.gP,
-         dkg.gQ,
-         dkg.kW,
-         dkg.kX,
-         dkg.lc,
-         dkg.ld,
-         dkg.lf,
-         dkg.oK,
-         dkg.oQ,
-         dkg.oZ,
-         dkg.pb,
-         dkg.pc,
-         dkg.pd,
-         dkg.pe,
-         dkg.sX,
-         dkg.sY,
-         dkg.sZ,
-         dkg.ta,
-         dkg.tb,
-         dkg.tc,
-         dkg.td,
-         dkg.te,
-         dkg.th,
-         dkg.ti,
-         dkg.tj
-      );
-      rf.a($$0, a, egu.V, new ehd(dkg.oY.m(), dkg.oU.m(), dkg.lm.m(), dkg.pa.m(), $$2, false));
-      rf.a($$0, b, egu.V, new ehd(dkg.oY.m(), dkg.oU.m(), dkg.lm.m(), dkg.pa.m(), $$2, true));
-      rf.a($$0, c, egu.V, new ehd(dkg.oP.m(), dkg.oL.m(), dkg.oR.m(), dkg.pa.m(), $$2, false));
-      rf.a($$0, d, egu.V, new ehd(dkg.oP.m(), dkg.oL.m(), dkg.oR.m(), dkg.pa.m(), $$2, true));
-      rf.a(
-         $$0,
-         e,
-         egu.r,
-         new eja(
-            ekz.a(dkg.fh.m().b(doe.f, Boolean.valueOf(true)).b(doe.g, Boolean.valueOf(false))),
-            ekz.a(dkg.fj.m().b(doe.f, Boolean.valueOf(false)).b(doe.g, Boolean.valueOf(false))),
-            3
-         )
-      );
-      rf.a(
-         $$0,
-         f,
-         egu.q,
-         new eja(ekz.a(dkg.fi.m().b(doe.g, Boolean.valueOf(false))), ekz.a(dkg.fj.m().b(doe.f, Boolean.valueOf(false)).b(doe.g, Boolean.valueOf(false))), 2)
-      );
-      eln $$3 = new eln(0.002F);
-      eln $$4 = new eln(0.01F);
-      eln $$5 = new eln(0.02F);
-      eln $$6 = new eln(0.05F);
-      eln $$7 = new eln(1.0F);
-      els $$8 = new els(96, 4, 2, new elj(rl.a(1, 3)));
-      els $$9 = new els(150, 2, 2, new elj(rl.a(1, 4)));
-      rf.a($$0, g, egu.f, a().c());
-      rf.a($$0, h, egu.f, b().a().c());
-      rf.a(
-         $$0,
-         i,
-         egu.f,
-         new eju.a(ekz.a(dkg.ae), new elz(6, 2, 1), ekz.a(dkg.aR), new eki(bsa.a(0), bsa.a(0)), new ekb(1, 1, 0, 1, 2, OptionalInt.empty()))
-            .a(ImmutableList.of(new elr(0.15F, 0.4F, 0.8F)))
-            .a()
-            .c()
-      );
-      rf.a(
-         $$0,
-         j,
-         egu.f,
-         new eju.a(ekz.a(dkg.ae), new elz(6, 2, 1), ekz.a(dkg.aR), new eki(bsa.a(0), bsa.a(0)), new ekb(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
-      );
-      rf.a(
-         $$0,
-         k,
-         egu.f,
-         new eju.a(ekz.a(dkg.ae), new elz(6, 2, 1), ekz.a(dkg.aR), new eki(bsa.a(0), bsa.a(0)), new ekb(1, 1, 0, 1, 2, OptionalInt.empty()))
-            .a(ImmutableList.of(new elr(0.15F, 0.4F, 0.8F), new elp(1.0F)))
-            .a()
-            .c()
-      );
-      rf.a($$0, l, egu.f, c().c());
-      rf.a($$0, m, egu.f, new eju.a(ekz.a(dkg.ab), new emb(5, 2, 2), ekz.a(dkg.aO), new eke(bsa.a(2), bsa.a(0)), new ekc(1, 0, 2)).a().c());
-      rf.a($$0, C, egu.f, g().c());
-      rf.a($$0, O, egu.f, g().a(List.of($$6)).c());
-      rf.a($$0, n, egu.f, new eju.a(ekz.a(dkg.Y), new eme(5, 2, 1), ekz.a(dkg.aL), new ekq(bsj.a(2, 3), bsj.a(0, 2), bsj.a(1, 2)), new ekc(2, 0, 2)).a().c());
-      rf.a($$0, o, egu.f, new eju.a(ekz.a(dkg.Y), new eme(6, 4, 0), ekz.a(dkg.aL), new eko(bsa.a(1), bsa.a(1), bsj.a(3, 4)), new ekc(2, 0, 2)).a().c());
-      rf.a($$0, p, egu.f, e().a(ImmutableList.of(new elo(0.2F), elv.b, new elq(0.25F))).a().c());
-      rf.a($$0, q, egu.f, f().c());
-      rf.a($$0, r, egu.f, e().a().c());
-      rf.a(
-         $$0,
-         s,
-         egu.f,
-         new eju.a(ekz.a(dkg.aa), new emd(10, 2, 19), ekz.a(dkg.aN), new ekm(bsa.a(2), bsa.a(0), 2), new ekc(1, 1, 2))
-            .a(ImmutableList.of(elv.b, new elq(0.25F)))
-            .c()
-      );
-      rf.a(
-         $$0,
-         t,
-         egu.f,
-         new eju.a(ekz.a(dkg.Y), new emc(13, 2, 14), ekz.a(dkg.aL), new ekn(bsa.a(0), bsa.a(0), bsj.a(13, 17)), new ekc(1, 1, 2))
-            .a(ImmutableList.of(new ell(ekz.a(dkg.l))))
-            .c()
-      );
-      rf.a(
-         $$0,
-         u,
-         egu.f,
-         new eju.a(ekz.a(dkg.Y), new emc(13, 2, 14), ekz.a(dkg.aL), new ekn(bsa.a(0), bsa.a(0), bsj.a(3, 7)), new ekc(1, 1, 2))
-            .a(ImmutableList.of(new ell(ekz.a(dkg.l))))
-            .c()
-      );
-      rf.a($$0, v, egu.f, d().a(ImmutableList.of($$3)).c());
-      rf.a($$0, w, egu.f, d().a(ImmutableList.of($$7)).c());
-      rf.a($$0, x, egu.f, a(dkg.X, dkg.aK, 5, 3, 0, 3).a(ImmutableList.of(new elq(0.25F))).c());
-      rf.a($$0, y, egu.f, new eju.a(ekz.a(dkg.aa), new eme(1, 0, 0), ekz.a(dkg.aK), new ekg(bsa.a(2), bsa.a(1), 2), new ekc(0, 0, 0)).c());
-      rf.a(
-         $$0,
-         z,
-         egu.f,
-         new eju.a(
-               ekz.a(dkg.X),
-               new elx(4, 2, 0, 3, bsj.a(1, 2)),
-               new elj(brj.<dxq>b().a(dkg.aT.m(), 3).a(dkg.aU.m(), 1)),
-               new ekp(bsa.a(3), bsa.a(0), bsa.a(2), 50),
-               new ekc(1, 0, 1)
-            )
-            .a(ekz.a(dkg.tl))
-            .b()
-            .c()
-      );
-      rf.a(
-         $$0,
-         A,
-         egu.f,
-         new eju.a(
-               ekz.a(dkg.af),
-               new emh(2, 1, 4, bsj.a(1, 4), 0.5F, bsj.a(0, 1), $$1.b(awp.cn)),
-               ekz.a(dkg.aS),
-               new ekp(bsa.a(3), bsa.a(0), bsa.a(2), 70),
-               Optional.of(
-                  new ekv(
-                     bsj.a(1, 3),
-                     ekz.a(dkg.ag),
-                     Optional.of(new ekt(ekz.a(dkg.tc), 0.5F)),
-                     new eku($$1.b(awp.co), jv.a(dke::p, dkg.tm, dkg.ah), ekz.a(dkg.ah), 8, 15, 0.2F)
-                  )
-               ),
-               new ekc(2, 0, 2)
-            )
-            .a(
-               List.of(
-                  new elq(0.125F), new elm(0.14F, 1, 0, new elf(ekz.a(dkg.H.m().b(dpd.d, Boolean.valueOf(true))), dpd.b, bsj.a(0, 4)), 2, List.of(jn.a)), $$4
-               )
-            )
-            .a()
-            .c()
-      );
-      rf.a(
-         $$0,
-         B,
-         egu.f,
-         new eju.a(
-               ekz.a(dkg.af),
-               new emh(4, 1, 9, bsj.a(1, 6), 0.5F, bsj.a(0, 1), $$1.b(awp.cn)),
-               ekz.a(dkg.aS),
-               new ekp(bsa.a(3), bsa.a(0), bsa.a(2), 70),
-               Optional.of(
-                  new ekv(
-                     bsj.a(3, 7),
-                     ekz.a(dkg.ag),
-                     Optional.of(new ekt(ekz.a(dkg.tc), 0.5F)),
-                     new eku($$1.b(awp.co), jv.a(dke::p, dkg.tm, dkg.ah), ekz.a(dkg.ah), 8, 15, 0.2F)
-                  )
-               ),
-               new ekc(3, 0, 2)
-            )
-            .a(
-               List.of(
-                  new elq(0.125F), new elm(0.14F, 1, 0, new elf(ekz.a(dkg.H.m().b(dpd.d, Boolean.valueOf(true))), dpd.b, bsj.a(0, 4)), 2, List.of(jn.a)), $$4
-               )
-            )
-            .a()
-            .c()
-      );
-      rf.a($$0, D, egu.f, a().a(List.of($$3, $$8, $$9)).c());
-      rf.a($$0, E, egu.f, a().a(List.of($$5)).c());
-      rf.a($$0, F, egu.f, a().a(List.of($$6)).c());
-      rf.a($$0, G, egu.f, c().a(List.of($$3)).c());
-      rf.a($$0, H, egu.f, c().a(List.of($$3, $$8, $$9)).c());
-      rf.a($$0, I, egu.f, c().a(List.of($$5)).c());
-      rf.a($$0, J, egu.f, c().a(List.of($$6)).c());
-      rf.a($$0, K, egu.f, f().a(List.of($$3, $$8, $$9)).c());
-      rf.a($$0, L, egu.f, f().a(List.of($$5)).c());
-      rf.a($$0, M, egu.f, f().a(List.of($$6)).c());
-      rf.a($$0, N, egu.f, f().a(List.of($$7)).c());
-      rf.a($$0, P, egu.f, a().a(ImmutableList.of($$8, $$9)).c());
-      rf.a($$0, Q, egu.f, b().a().a(ImmutableList.of($$8, $$9)).c());
-      rf.a($$0, R, egu.f, c().a(ImmutableList.of($$8, $$9)).c());
-      rf.a($$0, S, egu.f, f().a(List.of($$8, $$9)).c());
+   public static void a(qg<ehd<?, ?>> $$0) {
+      etc $$1 = new etk(awz.bg);
+      etc $$2 = new etk(awz.bh);
+      etc $$3 = new etk(awz.bi);
+      etc $$4 = new esk(dkw.ei);
+      etc $$5 = new etk(awz.bj);
+      List<ekd.a> $$6 = List.of(ekd.a($$2, dkw.S.m()), ekd.a($$3, dkw.T.m()));
+      List<ekd.a> $$7 = List.of(ekd.a($$2, dkw.Q.m()), ekd.a($$3, dkw.R.m()));
+      List<ekd.a> $$8 = List.of(ekd.a($$2, dkw.cF.m()), ekd.a($$3, dkw.cG.m()));
+      List<ekd.a> $$9 = List.of(ekd.a($$2, dkw.aY.m()), ekd.a($$3, dkw.aZ.m()));
+      List<ekd.a> $$10 = List.of(ekd.a($$2, dkw.rE.m()), ekd.a($$3, dkw.rF.m()));
+      List<ekd.a> $$11 = List.of(ekd.a($$2, dkw.U.m()), ekd.a($$3, dkw.V.m()));
+      rh.a($$0, a, ehr.I, new ekd($$4, dkw.ll.m(), 33));
+      rh.a($$0, b, ehr.I, new ekd($$4, dkw.ej.m(), 12));
+      rh.a($$0, c, ehr.I, new ekd($$4, dkw.W.m(), 10));
+      rh.a($$0, d, ehr.I, new ekd($$4, dkw.hy.m(), 14));
+      rh.a($$0, e, ehr.I, new ekd($$4, dkw.O.m(), 33));
+      rh.a($$0, f, ehr.I, new ekd($$4, dkw.pV.m(), 33));
+      rh.a($$0, g, ehr.I, new ekd($$1, dkw.j.m(), 33));
+      rh.a($$0, h, ehr.I, new ekd($$1, dkw.O.m(), 33));
+      rh.a($$0, i, ehr.I, new ekd($$1, dkw.c.m(), 64));
+      rh.a($$0, j, ehr.I, new ekd($$1, dkw.e.m(), 64));
+      rh.a($$0, k, ehr.I, new ekd($$1, dkw.g.m(), 64));
+      rh.a($$0, l, ehr.I, new ekd($$1, dkw.rd.m(), 64));
+      rh.a($$0, m, ehr.I, new ekd($$11, 17));
+      rh.a($$0, n, ehr.I, new ekd($$11, 17, 0.5F));
+      rh.a($$0, o, ehr.I, new ekd($$6, 9));
+      rh.a($$0, p, ehr.I, new ekd($$6, 4));
+      rh.a($$0, q, ehr.I, new ekd($$7, 9));
+      rh.a($$0, r, ehr.I, new ekd($$7, 9, 0.5F));
+      rh.a($$0, s, ehr.I, new ekd(List.of(ekd.a($$2, dkw.dV.m()), ekd.a($$3, dkw.dW.m())), 8));
+      rh.a($$0, t, ehr.I, new ekd($$8, 4, 0.5F));
+      rh.a($$0, v, ehr.I, new ekd($$8, 12, 0.7F));
+      rh.a($$0, w, ehr.I, new ekd($$8, 8, 1.0F));
+      rh.a($$0, u, ehr.I, new ekd($$8, 8, 0.5F));
+      rh.a($$0, x, ehr.I, new ekd($$9, 7));
+      rh.a($$0, y, ehr.I, new ekd($$9, 7, 1.0F));
+      rh.a($$0, z, ehr.I, new ekd(List.of(ekd.a($$2, dkw.fb.m()), ekd.a($$3, dkw.tJ.m())), 9));
+      rh.a($$0, A, ehr.I, new ekd(List.of(ekd.a($$2, dkw.fZ.m()), ekd.a($$3, dkw.ga.m())), 3));
+      rh.a($$0, B, ehr.af, new ekd($$5, dkw.pN.m(), 3, 1.0F));
+      rh.a($$0, C, ehr.af, new ekd($$5, dkw.pN.m(), 2, 1.0F));
+      rh.a($$0, D, ehr.I, new ekd($$10, 10));
+      rh.a($$0, E, ehr.I, new ekd($$10, 20));
+      rh.a($$0, F, ehr.I, new ekd($$1, dkw.ee.m(), 33));
    }
 }
